--- a/sass/components/_page-hero.scss
+++ b/sass/components/_page-hero.scss
@@ -12,35 +12,35 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-}
 
-.hero .title {
-  color: $button;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  margin-top: 0;
-  margin-bottom: 46px;
-  text-transform: uppercase;
-}
+  .title {
+    color: $button;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    margin-top: 0;
+    margin-bottom: 46px;
+    text-transform: uppercase;
+  }
 
-.hero .button {
-  display: inline-block;
-  border-radius: 4px;
-  padding: 10px 32px;
-  min-width: 200px;
-  height: 50px;
+  .button {
+    display: inline-block;
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 200px;
+    height: 50px;
 
-  background-color: $accent-color;
-  color: $button;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
+    background-color: $accent-color;
+    color: $button;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+  }
 }
