--- a/sass/components/_page-modal.scss
+++ b/sass/components/_page-modal.scss
@@ -84,23 +84,6 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + .input-label,
-.form-input:not(:placeholder-shown) + .input-label {
-  color: $accent-color;
-  transform: translateY(-30px) translateX(-26px);
-}
-
-.form-input:focus ~ .icon-modal,
-.form-input:not(:placeholder-shown) ~ .icon-modal {
-  fill: $accent-color;
-}
-
-.form-input:focus,
-.form-input:not(:placeholder-shown) {
-  border: 1px solid $accent-color;
-  outline: none;
-}
-
 .form-input {
   display: block;
   width: 448px;
@@ -113,6 +96,23 @@
   border-radius: 4px;
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus + .input-label,
+  .form-input:not(:placeholder-shown) + .input-label {
+    color: $accent-color;
+    transform: translateY(-30px) translateX(-26px);
+  }
+
+  &:focus ~ .icon-modal,
+  .form-input:not(:placeholder-shown) ~ .icon-modal {
+    fill: $accent-color;
+  }
+
+  &:focus,
+  .form-input:not(:placeholder-shown) {
+    border: 1px solid $accent-color;
+    outline: none;
+  }
 }
 
 .icon-modal {
@@ -136,12 +136,12 @@
   border-radius: 4px;
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-textarea:focus,
-.modal-textarea:not(:placeholder-shown) {
-  border: 1px solid $accent-color;
-  outline: none;
+  &:focus,
+  .modal-textarea:not(:placeholder-shown) {
+    border: 1px solid $accent-color;
+    outline: none;
+  }
 }
 
 .textarea-coments {
@@ -157,12 +157,12 @@
   letter-spacing: 0.01em;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-textarea:focus + .textarea-coments,
-.modal-textarea:not(:placeholder-shown) + .textarea-coments {
-  color: $accent-color;
-  transform: translateY(-30px);
+  &:focus + .textarea-coments,
+  .modal-textarea:not(:placeholder-shown) + .textarea-coments {
+    color: $accent-color;
+    transform: translateY(-30px);
+  }
 }
 
 .checkbox-text {
