--- a/sass/components/_page-section-button.scss
+++ b/sass/components/_page-section-button.scss
@@ -25,13 +25,13 @@
   padding-right: 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.button:hover,
-.button:focus {
-  background-color: $accent-color;
-  color: $button;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 3px 1px rgba(0, 0, 0, 0.1);
-  outline-width: 0px;
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    color: $button;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 3px 1px rgba(0, 0, 0, 0.1);
+    outline-width: 0px;
+  }
 }
