--- a/sass/components/_page-section-team.scss
+++ b/sass/components/_page-section-team.scss
@@ -19,6 +19,15 @@
 
 .section-team-card {
   display: flex;
+
+  .card {
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 1px 3px rgba(0, 0, 0, 0.12);
+  }
+}
+
+.section-team-card .card + .card {
+  margin-left: 30px;
 }
 
 .team-color-card {
@@ -29,17 +38,8 @@
   padding-bottom: 24px;
 }
 
-.section-team-card .card {
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
-}
-
 .social-mardgen + .social-mardgen {
   margin-left: 10px;
-}
-
-.section-team-card .card + .card {
-  margin-left: 30px;
 }
 
 .section-team .autor {
