--- a/sass/components/_page-section-work.scss
+++ b/sass/components/_page-section-work.scss
@@ -2,18 +2,41 @@
   border-top: 1px solid #ececec;
   padding-top: 94px;
   padding-bottom: 94px;
-}
 
-.section-work .title {
-  margin-top: 0;
-  margin-bottom: 50;
-  color: $title-text-color;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
+  .title {
+    margin-top: 0;
+    margin-bottom: 50;
+    color: $title-text-color;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+
+  .subtitle {
+    color: $title-text-color;
+  }
+
+  .desc {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    width: 370px;
+    height: 70px;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: $button;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
 }
 
 .work-cards {
@@ -23,27 +46,4 @@
 
 .work-cards .card + .card {
   margin-left: 30px;
-}
-
-.section-work .subtitle {
-  color: $title-text-color;
-}
-
-.section-work .desc {
-  position: absolute;
-  bottom: 0;
-  margin: 0;
-  width: 370px;
-  height: 70px;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: $button;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 }
