--- a/sass/components/_page-modal.scss
+++ b/sass/components/_page-modal.scss
@@ -35,16 +35,21 @@
 
 .button-close {
   position: absolute;
-  top: 0;
-  right: 0;
-  transform: translate(30%, -30%);
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background: $button;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
   border: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover {
+    fill: $accent-color;
+  }
 }
 
 .modale-title {
@@ -68,7 +73,8 @@
 
 .input-label {
   position: absolute;
-  top: 12px;
+  display: block;
+  top: 50%;
   left: 42px;
 
   font-family: Roboto;
@@ -80,17 +86,19 @@
 
   color: #757575;
 
-  /* transform: translateY(-50%); */
+  transform: translateY(-50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input {
   display: block;
   width: 448px;
-  height: 40px;
-  min-height: 40px;
   margin-bottom: 28px;
   padding: 12px 42px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -98,18 +106,18 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:focus + .input-label,
-  .form-input:not(:placeholder-shown) + .input-label {
+  &:not(:placeholder-shown) + .input-label {
     color: $accent-color;
-    transform: translateY(-30px) translateX(-26px);
+    transform: translateY(-40px) translateX(-26px);
   }
 
   &:focus ~ .icon-modal,
-  .form-input:not(:placeholder-shown) ~ .icon-modal {
+  &:not(:placeholder-shown) ~ .icon-modal {
     fill: $accent-color;
   }
 
   &:focus,
-  .form-input:not(:placeholder-shown) {
+  &:not(:placeholder-shown) {
     border: 1px solid $accent-color;
     outline: none;
   }
@@ -137,8 +145,13 @@
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  &:focus + .textarea-coments,
+  &:not(:placeholder-shown) + .textarea-coments {
+    color: $accent-color;
+    transform: translateY(-32px);
+  }
   &:focus,
-  .modal-textarea:not(:placeholder-shown) {
+  &:not(:placeholder-shown) {
     border: 1px solid $accent-color;
     outline: none;
   }
@@ -157,16 +170,11 @@
   letter-spacing: 0.01em;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:focus + .textarea-coments,
-  .modal-textarea:not(:placeholder-shown) + .textarea-coments {
-    color: $accent-color;
-    transform: translateY(-30px);
-  }
 }
 
 .checkbox-text {
-  display: flex;
+  display: inline-flex;
+  align-items: center;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -210,18 +218,21 @@
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
-}
 
-.checkbox-icon:checked + .checkbox-text::before {
-  background: url(../imeges/icon-check-focus.svg);
+  &:checked + .checkbox-text::before {
+    background: url(../imeges/icon-check-focus.svg);
+  }
 }
 
 .checkbox-text::before {
   content: "";
-  width: 15px;
+
   height: 15px;
+  width: 16px;
   margin-right: 8px;
   background: url(../imeges/icon-chek.svg);
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-form {
