--- a/sass/components/_page-modal.scss
+++ b/sass/components/_page-modal.scss
@@ -173,8 +173,7 @@
 }
 
 .checkbox-text {
-  display: inline-flex;
-  align-items: center;
+  display: flex;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
