--- a/css/main.css
+++ b/css/main.css
@@ -658,8 +658,7 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-social-team:focus,
-.icon-social-team:hover {
+.icon-social-team:focus, .icon-social-team:hover {
   border-radius: 50%;
   background-color: #2196f3;
   fill: #ffffff;
