--- a/sass/components/_page-section-team.scss
+++ b/sass/components/_page-section-team.scss
@@ -69,13 +69,13 @@
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.icon-social-team:focus,
-.icon-social-team:hover {
-  border-radius: 50%;
-  background-color: $accent-color;
-  fill: $button;
+  &:focus,
+  &:hover {
+    border-radius: 50%;
+    background-color: $accent-color;
+    fill: $button;
+  }
 }
 
 .section-team .text {
